# shrink-embeddings

./: .gitignore  README.md  binary_quantization.py  binary_quantization_faiss.py  binary_scalar_search.py  matryoshka_representantion_learning.py  mrl_binary_search.py  mrl_bq.py  pyproject.toml  scalar_quantization.py
